refactored some function names added and improved cleanup codes for destructors and deinitializer functions Entity::addComponent/removeComponent   added some missing nullptr checks   added Component::OnRemovedFromEntity() notification call fixed many bugs in WorldComponent::setParent(), ::AddChild() and ::RemoveChild()

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -36,6 +36,8 @@
 	optimize camera matrix caching
 		...or to forward calc instead of on-demand
 
+	add component and entity names to error messages
+
 --------------------------------------------------
 	todo for v0.4.0
 --------------------------------------------------
