--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -42,6 +42,11 @@
 		current solution may break older versions
 		if they are checked out after bigger dependency updates
 
+	add decouple and destruction lifecycle steps
+		reference decoupling should not happen in destructors
+		(they may involve calling virtual functions of already destroyed inheriting classes)
+		see WorldComponent destructor for details
+	
 --------------------------------------------------
 	todo for v0.4.0
 --------------------------------------------------
