updated doc WorldComponent   added 'GetChildren()' function   slightly optimized 'BuildTransformMtx()'   fixed 'refreshTransform()' wrongly handling parents   removed old junk bKeepPosition parameter in refreshTransform and related functions   removed old commented-out junk code Camera2D   fixed invalid matrix multiplication order SdlBillboardComponent   default width and height is now '1.0f' instead of '0.0f'   fixed flipped drawing   fixed invalid screen coordinates   added inner, child rectangle to test parent-child hierarchy (control with u,j,h,k)   improved 'CalcAngle()' and made it 3d-compatible   temporarily added Vector and Matrix printing functions (will later be moved to math3d)

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -5,6 +5,15 @@
 --------------------------------------------------
 	todo for v0.3.0
 --------------------------------------------------
+	Math3d extension
+	
+		WorldComponent
+			move CalcAngle to Math3d
+		SDLBillboard
+			PrintVector
+			PrintMatrix, etc.
+			
+
 
 	fix engine code
 		fix Entity and Component tick logic
@@ -47,6 +56,10 @@
 		(they may involve calling virtual functions of already destroyed inheriting classes)
 		see WorldComponent destructor for details
 	
+	WorldComponent
+		add refreshTransform dirty-logic to reduce unnecessary calculations
+
+
 --------------------------------------------------
 	todo for v0.4.0
 --------------------------------------------------
