--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -64,7 +64,19 @@
 --------------------------------------------------
 	todo for v0.4.0
 --------------------------------------------------
-	integrate OpenGLTutorials
+    ptlib compile
+        regardless of NDEBUG being defined, always undefine PT_DISABLE_DEBUG_OUTPUT
+            lib always has to contain the debug logging code
+            the linking project can disable functions for it with the PT_DISABLE_DEBUG_OUTPUT macro
+                when including the header
+    
+    Actor concurrency verification
+        OpenGL management has to be transactional with lambdas and exec queues
+    
+--------------------------------------------------
+	todo for v0.5.0
+--------------------------------------------------
+    integrate OpenGLTutorials
 		create necessary components
 			camera
 			mesh
