The program now has a Main window, which should only be hidden, not destroyed. Child classes can show/resize it. added a 3sec safety termination thread Engine initialization procedure timeline is now a lot clearer fixed crash for 'Buffer' operator=-s missing 'return *this' the project now links -lpng updated doc/ added gl/Texture class removed engine/Texture placeholder class script/   now installs glew-utils
'Opengl_test' project
  implemented some logic

gl/GlWrapper
  added 'GetShaderTypeAsString()'
  made 'PrintShaderInfoLog' and 'PrintProgramInfoLog' print a more verbose message

BillboardComponent
  fixed indexbuffer being initialized too early (before GL context creation)

Buffer
  implemented move ctor + move assignment
  added missing 'return *this' to 'operator='-s
  'FreeVRAM' and 'FreeClientsideData' now only print log if they need to run

DrawingControl + DrawingManager
  removed Initialize()
    moved these features to Engine

Engine
  fixed a compilation error in the default FragmentShader
  now uses vertex and fragment shaders
  prints software and GL info at startup
  rearranged initialization
  implemented GL initialization
  now always has an SDL Window for the program (might be hidden)
  refactored frametime calculation

Services
  now uses mostly shader_ptr-s instead of raw pointers

Shader and ShaderProgram
  fixed bugs in shader creation logic
  fixed shader compilation errors not being printed correctly
  improved logging

SystemManager + SystemControl
  made functions pure virtual, where needed
  implemented 'GetGraphicsAPIInfo()'

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -73,6 +73,10 @@
         display lines
         ambient lighting
 
+    create and verify Engine initialization procedure and timeline
+        hunt stray Init function calls
+        move variable setups to init functions if needed
+
     single-core Actor management verification
 
     POSTPONED - Actor concurrency verification
