BillboardComponent   holds an 'FRotator' prototype that'll be moved to 'math3d'   removed junk code that was commented out Components   rotations are now handled with 'FRotator' Camera + descendands   refactored rotation handling   removed 'LookAt' member, direction is now only handled by relative vector   rotation code now uses the Actor message system   default orientation is now along the X axis   added setters for:     Clipping distance     FOV     target 'LookAt' position DrawingManager   added draw stages (3 for now: Standard, UIWorld, UIScreen) Engine   enabled Depth testing   now determines window resolution by cfg/Engine.cfg   added 'DrawingOrigo' and 'ColorMode' uniforms to shaders EngineControl   added GetConfig() WorldComponent   moved some default intializers from ctors to header   default orientation is now along the X axis   'BuildTransformMtx' now uses math3d to constuct the matrices gl/ShaderProgram   added "const char* name" version of 'GetUniform()' test/opengl_test   added 'AxisDisplayComponent' prototype   now draws Origo with colored lines updated doc/

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -105,6 +105,9 @@
 --------------------------------------------------
 	todo
 --------------------------------------------------
+    implement performance profiler
+        find out what causes the few-seconds long startup hang after drawing first image
+
 	add controllers
 		player(keyboard / mouse)
 		have the logic ready to support
